--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,3 +28,8 @@ jobs:
         run: python bot.py
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          
+- name: Auto-assign person
+        uses: t00sh/auto-assign-action@v2.3.2
+        with:
+          configuration-path: ".github/assign-config.yml"
